--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -17,7 +18,12 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "standard": "^16.0.4",
     "tailwindcss": "^3.0.7",
+    "ts-standard": "^11.0.0",
     "typescript": "4.5.4"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
